# FastJSON-RPC

./: .gitignore  README.md  helpers.py  json-rpc_2.0.py  pyproject.toml
src/fastjson_rpc/: __init__.py  helpers.py  jsonrpc.py
tests/: test_jsonrpc.py
